--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "antd": "^4.11.2",
     "autoprefixer": "^9.8.6",
     "js-cookie": "^2.2.1",
     "postcss": "^7.0.35",
@@ -18,7 +19,8 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "wavesurfer.js": "^4.4.0"
   },
   "scripts": {
     "start": "craco start",
